--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "^2.0.0-alpha.0",
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
     "@sweetalert2/ngx-sweetalert2": "^7.2.0",
+    "@tinymce/tinymce-angular": "^3.3.1",
     "bootstrap": "^4.0.0",
     "jquery": "^3.4.1",
     "rxjs": "~6.4.0",
