--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tinymce/tinymce-angular": "^3.3.1",
     "bootstrap": "^4.0.0",
     "jquery": "^3.4.1",
+    "ngx-webstorage": "^4.0.2",
     "rxjs": "~6.4.0",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^9.6.0",
