--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
     "@sweetalert2/ngx-sweetalert2": "^7.2.0",
     "@tinymce/tinymce-angular": "^3.3.1",
+    "angular2-chartjs": "^0.5.1",
     "bootstrap": "^4.0.0",
     "jquery": "^3.4.1",
     "ngx-webstorage": "^4.0.2",
